--- a/site-cookbooks/users/templates/default/mike/tmuxinator/dashboard.yml
+++ b/site-cookbooks/users/templates/default/mike/tmuxinator/dashboard.yml
@@ -2,11 +2,14 @@ project_name: dashboard
 project_root: ~/projects/adjust/dashboard
 socket_path: /tmp/tmux-dashboard
 windows:
+  - server: brs
   - editor:
       layout: f98d,230x59,0,0[230x40,0,0,0,230x18,0,41,4]
       panes:
         - vim
-        - #empty
-  - server: brs
-  - logs: tail -f log/development.log
-  - console: bundle exec foreman run rails c
+        - guard
+  - console:
+      layout: even-vertical
+      panes:
+        - con
+        - pwd
