use one socket for all tmux projects

--- a/site-cookbooks/users/templates/default/mike/tmuxinator/chef.yml
+++ b/site-cookbooks/users/templates/default/mike/tmuxinator/chef.yml
@@ -1,6 +1,6 @@
 project_name: chef
 project_root: ~/projects/own/chef
-socket_path: /tmp/tmux-chef
+socket_path: /tmp/tmux
 windows:
   - console:
       - pwd
