--- a/site-cookbooks/users/templates/default/mike/tmuxinator/dashboard.yml
+++ b/site-cookbooks/users/templates/default/mike/tmuxinator/dashboard.yml
@@ -1,6 +1,6 @@
 project_name: dashboard
 project_root: ~/projects/adjust/dashboard
-socket_path: /tmp/tmux-dashboard
+socket_path: /tmp/tmux
 windows:
   - server: brs
   - editor:
