--- a/cookbooks/linux/templates/default/sysctl.conf
+++ b/cookbooks/linux/templates/default/sysctl.conf
@@ -42,6 +42,8 @@ net.ipv4.tcp_timestamps = <%= node[:sysctl][:net][:ipv4][:tcp_timestamps] %>
 net.ipv4.tcp_tw_recycle = <%= node[:sysctl][:net][:ipv4][:tcp_tw_recycle] %>
 net.ipv4.tcp_tw_reuse = <%= node[:sysctl][:net][:ipv4][:tcp_tw_reuse] %>
 net.netfilter.nf_conntrack_max = <%= node[:sysctl][:net][:netfilter][:nf_conntrack_max] %>
+net.core.rmem_max = 15728640
+net.core.wmem_max = 5242880
 <% end %>
 
 # when the kernel panics, automatically reboot in 60 seconds
