kafka: use virtual hostnames for private and public IP access

--- a/cookbooks/kafka/templates/default/server.properties
+++ b/cookbooks/kafka/templates/default/server.properties
@@ -1,6 +1,6 @@
 broker.id=<%= node[:cluster][:host][:id] %>
 <% if node[:kafka][:private] %>
-advertised.host.name=<%= node[:private_hostname] %>
+advertised.host.name=<%= node[:kafka][:private_hostname] %>
 <% else %>
 advertised.host.name=<%= node[:fqdn] %>
 <% end %>
