increase network buffers for better throughput

--- a/cookbooks/linux/templates/default/sysctl.conf
+++ b/cookbooks/linux/templates/default/sysctl.conf
@@ -33,6 +33,10 @@ net.ipv4.icmp_echo_ignore_broadcasts = 1
 # network tuning
 net.core.somaxconn = <%= node[:sysctl][:net][:core][:somaxconn] %>
 <% if !lxc? %>
+net.core.rmem_max = 67108864
+net.core.wmem_max = 67108864
+net.ipv4.tcp_rmem = 4096 87380 33554432
+net.ipv4.tcp_wmem = 4096 65536 33554432
 net.core.netdev_max_backlog = <%= node[:sysctl][:net][:core][:netdev_max_backlog] %>
 net.ipv4.ip_local_port_range = <%= node[:sysctl][:net][:ipv4][:ip_local_port_range] %>
 net.ipv4.tcp_fin_timeout = <%= node[:sysctl][:net][:ipv4][:tcp_fin_timeout] %>
@@ -42,8 +46,6 @@ net.ipv4.tcp_timestamps = <%= node[:sysctl][:net][:ipv4][:tcp_timestamps] %>
 net.ipv4.tcp_tw_recycle = <%= node[:sysctl][:net][:ipv4][:tcp_tw_recycle] %>
 net.ipv4.tcp_tw_reuse = <%= node[:sysctl][:net][:ipv4][:tcp_tw_reuse] %>
 net.netfilter.nf_conntrack_max = <%= node[:sysctl][:net][:netfilter][:nf_conntrack_max] %>
-net.core.rmem_max = 15728640
-net.core.wmem_max = 5242880
 <% end %>
 
 # when the kernel panics, automatically reboot in 60 seconds
