druid: make it possible to turn off caching

--- a/cookbooks/druid/templates/default/common.runtime.properties
+++ b/cookbooks/druid/templates/default/common.runtime.properties
@@ -22,9 +22,10 @@ druid.storage.type=<%= node[:druid][:storage][:type] %>
 druid.storage.storageDirectory=<%= node[:druid][:storage][:directory] %>
 
 # Cache
-<% if memcached_nodes.any? %>
+<% if node[:druid][:cache][:enabled] && memcached_nodes.any? %>
 druid.cache.type=memcached
 druid.cache.hosts=<%= memcached_nodes.map { |n| "#{n[:ipaddress]}:11211" }.join(",") %>
+druid.cache.maxObjectSize=1048576
 <% end %>
 
 # Monitoring
