upgrade to kafka 0.10

--- a/cookbooks/kafka/templates/default/producer.properties
+++ b/cookbooks/kafka/templates/default/producer.properties
@@ -1,4 +1,4 @@
-metadata.broker.list=<%= kafka_connect(node[:kafka][:mirror][:destination]) %>
+bootstrap.servers=<%= kafka_connect(node[:kafka][:mirror][:destination]) %>
 producer.type=async
 compression.codec=none
 serializer.class=kafka.serializer.DefaultEncoder
