--- a/cookbooks/kafka/templates/default/server.properties
+++ b/cookbooks/kafka/templates/default/server.properties
@@ -19,3 +19,6 @@ log.retention.bytes=<%= node[:kafka][:log][:retention_bytes] %>
 num.replica.fetchers=8
 controlled.shutdown.enable=true
 delete.topic.enable=true
+
+inter.broker.protocol.version=0.10.0.0
+log.message.format.version=0.10.0.0
