improve druid cache config

--- a/cookbooks/druid/templates/default/common.runtime.properties
+++ b/cookbooks/druid/templates/default/common.runtime.properties
@@ -21,19 +21,11 @@ druid.metadata.storage.connector.password=<%= mysql_master_connection(node[:drui
 druid.storage.type=<%= node[:druid][:storage][:type] %>
 druid.storage.storageDirectory=<%= node[:druid][:storage][:directory] %>
 
-# Cache
-<% if node[:druid][:cache][:enabled] && memcached_nodes.any? %>
-druid.cache.type=memcached
-druid.cache.hosts=<%= memcached_nodes.map { |n| "#{n[:ipaddress]}:11211" }.join(",") %>
-druid.cache.maxObjectSize=1048576
-<% end %>
-
 # Monitoring
 druid.monitoring.monitors=["com.metamx.metrics.JvmMonitor"]
 
 # Metrics Logging
-druid.emitter=http
-druid.emitter.http.recipientBaseUrl=http://localhost:1030/druid
+druid.emitter=logging
 druid.request.logging.type=emitter
 druid.request.logging.feed=queries
 
