--- a/cookbooks/druid/templates/default/runtime.properties
+++ b/cookbooks/druid/templates/default/runtime.properties
@@ -19,12 +19,8 @@ druid.manager.rules.defaultTier=_default
 
 <% when "broker" %>
 # Broker Config
-druid.monitoring.monitors=["com.metamx.metrics.JvmMonitor","io.druid.client.cache.CacheMonitor"]
 druid.broker.balancer.type=<%= node[:druid][:broker][:balancer] %>
 druid.broker.select.tier=highestPriority
-druid.broker.cache.useCache=true
-druid.broker.cache.populateCache=true
-druid.broker.cache.unCacheable=["select"]
 druid.broker.http.numConnections=<%= node[:druid][:broker][:connections] %>
 druid.broker.http.readTimeout=<%= node[:druid][:broker][:timeout] %>
 druid.query.chunkPeriod=P1M
@@ -42,6 +38,18 @@ druid.segmentCache.numLoadingThreads=4
 druid.historical.cache.useCache=true
 druid.historical.cache.populateCache=true
 druid.historical.cache.unCacheable=["select"]
+
+# Cache
+<% if memcached_nodes.any? %>
+druid.cache.type=hybrid
+druid.cache.l1.type=local
+druid.cache.l1.sizeInBytes=17179869184
+druid.cache.l2.type=memcached
+druid.cache.l2.hosts=<%= memcached_nodes.map { |n| "#{n[:ipaddress]}:11211" }.join(",") %>
+druid.cache.l2.maxObjectSize=1048576
+druid.cache.l2.timeout=1000
+druid.cache.l2.numConnections=<%= node[:cpu][:total] %>
+<% end %>
 
 <% when "realtime" %>
 # Realtime Config
